api-db1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
        version: v1
    spec:
      containers:
        - name: db-container
          image: ryutaterada/k8s-mysql:1.0.3
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
          ports:
            - containerPort: 3306
              name: db
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /var/lib/mysql
            - name: db-config
              mountPath: /etc/mysql/conf.d
              readOnly: true
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: db-pv-claim
        - name: db-config
          configMap:
            name: db-config
            items:
              - key: charset.cnf
                path: charset.cnf
