nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
        - name: nginx-container
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx # /etc/nginxにvolumesのnginx-confをmountする
              readOnly: true
              name: nginx-conf
            - mountPath: /var/log/nginx
              name: log
      volumes:
        - name: nginx-conf # volumeMountsで/etc/nginxにmountするやつ
          configMap:
            name: nginx-conf # ConfigMapのnginx-confを/etc/nginx以下に配置する
            items:
              - key: nginx.conf # nginx-confのkey
                path: nginx.conf # nginx.confというファイル名
              - key: virtualhost.conf
                path: virtualhost/virtualhost.conf # ディレクトリを掘ることも可能
        - name: log
          emptyDir: {}
