api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express
  #labels:
  ###app: express
  ###version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express
      version: v1
  template:
    metadata:
      labels:
        app: express
        version: v1
    spec:
      containers:
        - name: express-container
          image: ryutaterada/k8s-express:1.1.2
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
          ports:
            - containerPort: 5000
              name: express
          #env:
          #  - name: DB_URL
          #    value: mysql://mysql:3306/user?replicaSet=rs0
          #  - name: WAIT_HOSTS
          #    value: mysql:3306
          #  - name: DB_HOST
          #    value: mysql
          #  - name: DB_PORT
          #    value: "3306"
---
apiVersion: v1
kind: Service
metadata:
  name: express-service
  #labels:
  ###app: express
  ###service: express
spec:
  type: ClusterIP
  selector:
    app: express
  #clusterIP: None
  ports:
    - port: 80
      targetPort: 5000
      name: http
