mesh1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: db-fix
spec:
  host: db-service
  trafficPolicy:
    tls:
      mode: DISABLE
