web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  #labels:
  ###app: web
  ###version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
        - name: web-container
          image: ryutaterada/k8s-nodejs:1.0.4
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
          ports:
            - containerPort: 3000
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  #labels:
  ###app: web
  ###service: web
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3000
      name: http
  #clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  backend:
    serviceName: web-service
    servicePort: 80
